fdo#34392 recompute column widths after font scale change in startcenter